2005-11-02  Sven Panne  <sven.panne@aedion.de>

	* src/alc/alc_context.c, src/alc/alc_device.h: Fixed error handling for
	alcGetIntegerv, previously a device was needed even for querying
	ALC_MAJOR_VERSION and ALC_MINOR_VERSION, which was wrong.

2005-10-27  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/alsa/alsa.c: merge Dino Puller's patch for being 
	able to use alsa with dmix

	* configure.ac: make CFLAGS overwriteable by user

2005-10-27  Sven Panne  <sven.panne@aedion.de>

	* admin/openal.spec: Synched with latest Makefile changes.

2005-10-25  Prakash Punnoor <prakash@punnoor.de>

	* configure.ac: x86_64 related fix

2005-10-24  Prakash Punnoor <prakash@punnoor.de>

	* Makefile.in: (gentoo patch) install at correct dirs

2005-10-22  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/i386/floatmul.c, src/arch/i386/x86_simd_support_prk.h:
	fix MMX floatmul for 1.0f > sa >= 0.5f

2005-10-11  Prakash Punnoor <prakash@punnoor.de>

	* configure.ac, src/al_mixer.h: only allow stripped down generic
	mixing if MMX is present

2005-10-06  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/i386/floatmul.c: added MMX routine

	* src/arch/i386/x86_simd_support_prk.h,
	src/arch/i386/mixaudio16_mmx_prk.c:  moved common SIMD support code
	into above header file

2005-10-01  Prakash Punnoor <prakash@punnoor.de>

	* INSTALL: added instructions for using x86 SIMD

	* configure.ac: checks for MMX now

2005-09-30  Prakash Punnoor <prakash@punnoor.de>

	* configure.ac, src/Makefile.in, src/al_mixer.h, src/al_mixfunc.c,
	src/mixaudio16.c, src/mixaudio16.h, src/arch/i386/memcpy_mmx_prk.nasm,
	src/arch/i386/mixaudio16_mmx_prk.c, src/arch/i386/mixaudio16_mmx_prk.h:
	add MMX audio mixing

	* x86_cpu_caps_prk.c: fix OPENAL_DISABLE_SIMD handling and SIMD
	should only be enabled at runtime detection, if SIMD was enabled
	at compile time

2005-09-30  Sven Panne  <sven.panne@aedion.de>

	* admin/openal.spec: Synched with CREDITS/AUTHORS changes.
